<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="store_picture_title">Save image</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_capital_off">OFF</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="homeSite">http://www.appsgeyser.com/</string>
    <string name="getAppModeUrl">http://ads.appsgeyser.com/checkstatus.php</string>
    <string name="fullScreenBannerUrl">http://splash.appsgeyser.com/</string>
    <string name="aboutLink">http://www.appsgeyser.com/ads/landing.php</string>
    <string name="getWidgetUrl">http://www.appsgeyser.com/</string>
    <string name="adsDomainUrl">http://ads.appsgeyser.com/</string>
    <string name="pushDomainUrl">http://push.appsgeyser.com/</string>
    <string name="pullDomainUrl1">http://updapp.com/</string>
    <string name="pullDomainUrl2">http://iccto.com/</string>
    <string name="pullDomainUrl3">http://iccto.net/</string>
    <string name="searchUrl">http://app2ad.com/?q=</string>
    <string name="statDomainUrl">http://stat.appsgeyser.com/</string>
    <string name="pausedContentUrl">http://www.appsgeyser.com/paused/</string>
    <string name="applicationID">softomate@softomate.com</string>
    <string name="dotsButtonTitle">˙˙˙</string>
    <string name="errorHtmlPath">file:///android_asset/error.html</string>
    <string name="hello">Hello World, Test!</string>
    <string name="menuExitTitle">Exit</string>
    <string name="menuRefreshTitle">Refresh</string>
    <string name="menuAboutTitle">About</string>
    <string name="menuShareTitle">Share</string>
    <string name="menuRateTitle">Rate</string>
    <string name="progressBarMessage">Loading content…</string>
    <string name="noInternetConnectionMessage">Internet connection is unavailable</string>
    <string name="shareContentSubject">Get this cool Android App</string>
    <string name="shareSiteSubject">Enjoy this site</string>
    <string name="loadingVideo">Loading video</string>
    <string name="noContentInfoMessage">"Something goes wrong :(
No content available"</string>
    <string name="loadingPaneTitle">Loading…</string>
    <string name="startupScreenTitle">Loading…</string>
    <string name="facebookButtonTitle">Facebook</string>
    <string name="youtubeButtonTitle">YouTube</string>
    <string name="gmailButtonTitle">GMail</string>
    <string name="pinToHomeScreenButtonTitle">Pin to desktop</string>
    <string name="userAgentCaption">Set User Agent</string>
    <string name="defaultUserAgent">Default User Agent</string>
    <string name="desktopUserAgent">Desktop User Agent</string>
    <string name="setNewUserAgent">Save and Apply</string>
    <string name="urlBoxHint">Search or type URL</string>
    <string name="backButtonTitle">Back</string>
    <string name="forwardButtonTitle">Forward</string>
    <string name="refreshgButtonTitle">Refresh</string>
    <string name="homeButtonTitle">Home</string>
    <string name="appExitCaption">Do you really want to exit application?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="build">Build</string>
    <string name="sign_in_to">Sign in to …</string>
    <string name="username">Name</string>
    <string name="password">Password</string>
    <string name="requestDesktopVersion">Request desktop page</string>
    <string name="AddToStartPage">Add this to start page</string>
    <string name="new_start_page_item_added">New start page item added</string>
    <string name="dialog_select_action">Select action</string>
    <string name="open_file">Open file</string>
    <string name="save_file">Save file</string>
    <string name="cancel">Cancel</string>
    <string name="startupConfirmationDialogMessage">Advertisements can be displayed at the top or bottom of the screen. A full screen advertisement can be displayed on app start or closure or after some user actions. If you click on the advertisement, you will be redirected to a third party web page.</string>
    <string name="startupConfirmationDialogTitle">Advertising Terms</string>
    <string name="startupConfirmationDialogAcceptButtonCaption">Accept</string>
    <string name="startupConfirmationDialogRefuseButtonCaption">Refuse</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="ssl_error_title">SSL connection error!</string>
    <string name="ssl_error_message">"The site's security certificate is not trusted!"</string>
    <string name="ssl_error_positive">Proceed anyway</string>
    <string name="ssl_error_negative">Back to safety</string>
    <string name="aboutDescriptionWithPubName">App APP_VERSION by PUB_NAME &lt;br /> Powered by &lt;a href=\"APPSGEYSER_URL\">AppsGeyser.com&lt;/a></string>
    <string name="aboutDescriptionWithoutPubName">This App APP_VERSION is powered by &lt;a href=\"APPSGEYSER_URL\">AppsGeyser.com&lt;/a></string>
    <string name="aboutFlagText">&lt;b>&lt;a href=http://www.appsgeyser.com/report/?app=APP_ID>Flag this App&lt;/a>&lt;/b>: Tell us if this app has objectionable content.</string>
    <string name="chromeUserAgent">Mozilla/5.0 (Windows NT 6.2) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/28.0.1464.0 Safari/537.36</string>
    <string name="platformVersion">1.46</string>
</resources>
